fixed the div wrap of the main page

--- a/styles.css
+++ b/styles.css
@@ -19,10 +19,10 @@ body {
 }
 
 .container {
-    padding: 30px;
-    margin: 20px auto;
+    padding: 10px;
+    margin: auto;
     text-align: center;
-    /* background-color: #F0997D; */
+    background-color: #F0997D;
     border-radius: 10px;
 }
 
@@ -30,7 +30,7 @@ body {
 .crepe,
 .strawberry {
     display: inline-block;
-    margin: 10px 25px;
+    margin: 10px 10px;
     background-color: #F9F5F6;
     border-radius: 10px;
     box-shadow: 2px 2px 7px;
@@ -39,3 +39,5 @@ body {
 img {
     border-radius: 10px;
 }
+
+
